mobile spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -397,6 +397,10 @@ section.home {
         box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     }
 
+    section {
+        padding: 100px 40px;
+    }
+
     .toggle {
         position: fixed;
         top: 0;
